# sqlmodel_crud

./: LICENSE  pyproject.toml
sqlmodel_crud/: crud_service.py
tests/: test_service.py
tests/database/: fixtures.py  player.py
