[tool.poetry]
name = "sqlmodel-crud"
version = "0.1.0"
description = ""
authors = ["codemaxi <codemaxi@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.18"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
